python/setup.py: Remove unnecessary imports, allowing this to run in Python 2.7. (issue 12)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2010-07-21  James Teh <jamie@jantrid.net>
+
+	* python/setup.py: Remove unnecessary imports, allowing this to
+	run in Python 2.7. (issue 12)
+
 2010-04-15  Christian Egli  <christian.egli@sbszh.ch>
 
 	* tests/brl_checks.h: 
