Update the release number

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-06-21  Christian Egli  <christian.egli@sbs.ch>
+
+	* configure.ac: Update release number
+
 2013-06-10  Joseph Lee <joseph.lee22590@gmail.com>
 
 	* tables/en-ueb-g1.ctb:
