Update the instructions on how to cross-compile

--- a/HACKING
+++ b/HACKING
@@ -133,9 +133,10 @@ Use the mingw win32 cross compiler as shown below. Use the prefix
 option to install the binaries to a temporary place where you can
 create a zip file.
 
-  ./configure --build i686-pc-linux-gnu --host i586-mingw32msvc --prefix=/tmp/mingw32msvc 
+  ./configure --build i686-pc-linux-gnu --host i586-mingw32msvc --prefix=/tmp/liblouis-mingw32msvc 
   make
-  make dist
+  make install
+  zip -r liblouis-mingw32msvc.zip /tmp/liblouis-mingw32msvc
 
 
 * Release Procedure
