--- a/man/weston.ini.man
+++ b/man/weston.ini.man
@@ -288,6 +288,15 @@ be one of the following 8 strings:
 .BR  "flipped-270   " "Flipped and 90 degrees counter clockwise"
 .fi
 .RE
+.TP 7
+.BI "seat=" name
+The logical seat name that that this output should be associated with. If this
+is set then the seat's input will be confined to the output that has the seat
+set on it. The expectation is that this functionality will be used in a
+multiheaded environment with a single compositor for multiple output and input
+configurations. The default seat is called "default" and will always be
+present. This seat can be constrained like any other.
+.RE
 .SH "INPUT-METHOD SECTION"
 .TP 7
 .BI "path=" "/usr/libexec/weston-keyboard"
