--- a/README
+++ b/README
@@ -1,11 +1,16 @@
                               Fontconfig
              Font configuration and customization library
-                      Version 2.11.91 (2.12 RC1)
-                              2014-12-25
+                      Version 2.11.92 (2.12 RC2)
+                              2015-01-13
 
 
 Check INSTALL for compilation and installation instructions.
 Report bugs to https://bugs.freedesktop.org in the fontconfig module.
+
+2.11.92 (2.12 RC2)
+
+Akira TAGOH (1):
+      Add missing docs
 
 2.11.91 (2.12 RC1)
 
