ICU update to 54.1 - step 5
1. Apply Chrome's locale data change on top of Google's locale data
   changes

2. Breakiterator changes
  - Apply brkitr.patch with update to ICU 54.1; line/word.txt
  - Check in a more compact Khmer dictionary along with
    a parameter adjustment in dictbe.cpp
  - Add a few common words to the CJ dictionary
  - Update brklocal.mk (out customized build file) to ICU 54
  - Update android/brkitr.patch and data/brkitr/word_ja.txt for Android

Data size checkpoint:
 * Non-Android: 19,575,216 bytes. ~500kB reduction relative
   to the previous step comes mainly from the compact Khmer dictionary.
 * Android: 17,601,520 bytes. 2MB difference comes from removing cjdict.

BUG=428145
TEST=net_unittests --gtest_filter="*IDN*"
TEST=layout tests
R=mark@chromium.org

Review URL: https://codereview.chromium.org/858363003

--- a/source/data/locales/tr.txt
+++ b/source/data/locales/tr.txt
@@ -384,7 +384,9 @@ tr{
                 "d MMMM y EEEE",
                 "d MMMM y",
                 "d MMM y",
+                // Chromium change begins. See b/8566501.
                 "d MM y",
+                // Chromium change ends.
                 "{1} {0}",
                 "{1} {0}",
                 "{1} {0}",
@@ -860,7 +862,9 @@ tr{
                 "d MMMM y G EEEE",
                 "d MMMM y G",
                 "d MMM y G",
-                "d.MM.y G",
+                // Chromium change begins. See b/8566501.
+                "d MM y G",
+                // Chromium change ends.
                 "{1} {0}",
                 "{1} {0}",
                 "{1} {0}",
