Don't use the _tzcnt intrinsics
Clang won't allow them unless for targets that support BMI.

BUG=556735

Change-Id: I8bffaf60b4dd736ba73c871f706c14924ed85510

--- a/chromium/patches/README
+++ b/chromium/patches/README
@@ -65,6 +65,9 @@ Current patches:
     C++11 compatability for string concatenation (http://crbug.com/454590).
     Add spaces between string literals and tokens.
 
+  Change to libavutil/x86/intmath.h
+    Avoid using the _tzcnt intrinsics (crbug.com/556735).
+
   Changes/additions to libavutil/x86/x86inc.asm
     https://chromium-review.googlesource.com/#/c/272274/
     Fixes the conditionals on Linux so that these symbols are hidden and
