avformat/matroskadec: Check subtitle stream before dereferencing
Unrecognized streams are not allocated
Fixes: flicker-1.color1.vp91447030769.08.webm

Found-by: Chris Cunningham <chcunningham@google.com>
Signed-off-by: Michael Niedermayer <michael@niedermayer.cc>

(cherry picked from commit a5034b324cad4c29d47ef285a30b0705e6eb0384)

BUG=484423
Change-Id: I08891414f46011328131607e6123f6935f73bc91

--- a/chromium/patches/README
+++ b/chromium/patches/README
@@ -1,7 +1,8 @@
 Current Status as of November 10, 2015
 
 Upstream cherry-picks:
-  None.
+  Commit 17e394b99da027a9b31a9fd495add3137c0f0422 fixes crash in matroskadec.c.
+  See https://crbug.com/484423.
 
 Autorename:
   autorename_* files are renamed copies of various files that would cause
@@ -59,7 +60,7 @@ Current patches:
     TODO: Remove once Chromium requires VS2015.
 
   Changes to libavutil/mem.c
-    Enable av_max_alloc(0) to remove alloc size bound. 
+    Enable av_max_alloc(0) to remove alloc size bound.
 
   Changes to libavutil/timer.h
     C++11 compatability for string concatenation (http://crbug.com/454590).
