Set project to AOMedia & version number to 0.1.0
Change-Id: I04a2a732274f7773a9a1991591d881ea4d4874e8

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+2016-04-07 v0.1.0 "AOMedia Codec 1"
+  This release is the first Alliance for Open Media codec.
+
 2015-11-09 v1.5.0 "Javan Whistling Duck"
   This release improves upon the AV1 encoder and speeds up the encoding and
   decoding processes.
