--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,53 +2,53 @@
   This release is the first Alliance for Open Media codec.
 
 2015-11-09 v1.5.0 "Javan Whistling Duck"
-  This release improves upon the AV1 encoder and speeds up the encoding and
+  This release improves upon the VP9 encoder and speeds up the encoding and
   decoding processes.
 
   - Upgrading:
-    This release is ABI incompatible with 1.4.0. It drops deprecated AOM
-    controls and adds a variety of AV1 controls for testing.
+    This release is ABI incompatible with 1.4.0. It drops deprecated VP8
+    controls and adds a variety of VP9 controls for testing.
 
-    The aomenc utility now prefers AV1 by default.
+    The vpxenc utility now prefers VP9 by default.
 
   - Enhancements:
-    Faster AV1 encoding and decoding
-    Smaller library size by combining functions used by AOM and AV1
+    Faster VP9 encoding and decoding
+    Smaller library size by combining functions used by VP8 and VP9
 
   - Bug Fixes:
     A variety of fuzzing issues
 
 2015-04-03 v1.4.0 "Indian Runner Duck"
-  This release includes significant improvements to the AV1 codec.
+  This release includes significant improvements to the VP9 codec.
 
   - Upgrading:
     This release is ABI incompatible with 1.3.0. It drops the compatibility
-    layer, requiring AOM_IMG_FMT_* instead of IMG_FMT_*, and adds several codec
-    controls for AV1.
+    layer, requiring VPX_IMG_FMT_* instead of IMG_FMT_*, and adds several codec
+    controls for VP9.
 
   - Enhancements:
-    Faster AV1 encoding and decoding
-    Multithreaded AV1 decoding (tile and frame-based)
-    Multithreaded AV1 encoding - on by default
-    YUV 4:2:2 and 4:4:4 support in AV1
-    10 and 12bit support in AV1
+    Faster VP9 encoding and decoding
+    Multithreaded VP9 decoding (tile and frame-based)
+    Multithreaded VP9 encoding - on by default
+    YUV 4:2:2 and 4:4:4 support in VP9
+    10 and 12bit support in VP9
     64bit ARM support by replacing ARM assembly with intrinsics
 
   - Bug Fixes:
-    Fixes a AV1 bitstream issue in Profile 1. This only affected non-YUV 4:2:0
+    Fixes a VP9 bitstream issue in Profile 1. This only affected non-YUV 4:2:0
     files.
 
   - Known Issues:
     Frame Parallel decoding fails for segmented and non-420 files.
 
 2013-11-15 v1.3.0 "Forest"
-  This release introduces the AV1 codec in a backward-compatible way.
-  All existing users of AOM can continue to use the library without
-  modification. However, some AOM options do not map to AV1 in the same manner.
+  This release introduces the VP9 codec in a backward-compatible way.
+  All existing users of VP8 can continue to use the library without
+  modification. However, some VP8 options do not map to VP9 in the same manner.
 
-  The AV1 encoder in this release is not feature complete. Users interested in
+  The VP9 encoder in this release is not feature complete. Users interested in
   the encoder are advised to use the git master branch and discuss issues on
-  libaom mailing lists.
+  libvpx mailing lists.
 
   - Upgrading:
     This release is ABI and API compatible with Duclair (v1.0.0). Users
@@ -59,7 +59,7 @@
       Get rid of bashisms in the main build scripts
       Added usage info on command line options
       Add lossless compression mode
-      Dll build of libaom
+      Dll build of libvpx
       Add additional Mac OS X targets: 10.7, 10.8 and 10.9 (darwin11-13)
       Add option to disable documentation
       configure: add --enable-external-build support
@@ -67,11 +67,11 @@
       configure: support mingw-w64
       configure: support hardfloat armv7 CHOSTS
       configure: add support for android x86
-      Add estimated completion time to aomenc
-      Don't exit on decode errors in aomenc
-      aomenc: support scaling prior to encoding
-      aomdec: support scaling output
-      aomenc: improve progress indicators with --skip
+      Add estimated completion time to vpxenc
+      Don't exit on decode errors in vpxenc
+      vpxenc: support scaling prior to encoding
+      vpxdec: support scaling output
+      vpxenc: improve progress indicators with --skip
       msvs: Don't link to winmm.lib
       Add a new script for producing vcxproj files
       Produce Visual Studio 10 and 11 project files
@@ -81,7 +81,7 @@
       Add encoding option --static-thresh
 
   - Speed:
-      Miscellaneous speed optimizations for AOM and AV1.
+      Miscellaneous speed optimizations for VP8 and VP9.
 
   - Quality:
       In general, quality is consistent with the Eider release.
@@ -102,8 +102,8 @@
     document for that release.
 
   - Enhancements:
-      AOM optimizations for MIPS dspr2
-      aomenc: add -quiet option
+      VP8 optimizations for MIPS dspr2
+      vpxenc: add -quiet option
 
   - Speed:
       Encoder and decoder speed is consistent with the Eider release.
@@ -131,7 +131,7 @@
     document for that release.
 
     This release introduces a new temporal denoiser, controlled by the
-    AOME_SET_NOISE_SENSITIVITY control. The temporal denoiser does not
+    VP8E_SET_NOISE_SENSITIVITY control. The temporal denoiser does not
     currently take a strength parameter, so the control is effectively
     a boolean - zero (off) or non-zero (on). For compatibility with
     existing applications, the values accepted are the same as those
@@ -141,10 +141,10 @@
     is more computationally intensive than the spatial one.
 
     This release removes support for a legacy, decode only API that was
-    supported, but deprecated, at the initial release of libaom
+    supported, but deprecated, at the initial release of libvpx
     (v0.9.0). This is not expected to have any impact. If you are
     impacted, you can apply a reversion to commit 2bf8fb58 locally.
-    Please update to the latest libaom API if you are affected.
+    Please update to the latest libvpx API if you are affected.
 
   - Enhancements:
       Adds a motion compensated temporal denoiser to the encoder, which
@@ -158,17 +158,17 @@
         OS/2 support
         SunCC support
 
-      Changing resolution with aom_codec_enc_config_set() is now
+      Changing resolution with vpx_codec_enc_config_set() is now
       supported. Previously, reinitializing the codec was required to
       change the input resolution.
 
-      The aomenc application has initial support for producing multiple
+      The vpxenc application has initial support for producing multiple
       encodes from the same input in one call. Resizing is not yet
       supported, but varying other codec parameters is. Use -- to
       delineate output streams. Options persist from one stream to the
       next.
 
-      Also, the aomenc application will now use a keyframe interval of
+      Also, the vpxenc application will now use a keyframe interval of
       5 seconds by default. Use the --kf-max-dist option to override.
 
   - Speed:
@@ -205,7 +205,7 @@
       enhancement (MFQE) in sections of the frame where there is motion.
       (#392)
 
-      Fixed corruption issues when aom_codec_enc_config_set() was called
+      Fixed corruption issues when vpx_codec_enc_config_set() was called
       with spatial resampling enabled.
 
       Fixed a decoder error introduced in Duclair where the segmentation
@@ -218,9 +218,9 @@
   v0.9.7, so all users of that release are encouraged to upgrade.
 
   - Upgrading:
-      This release is ABI incompatible with prior releases of libaom, so the
+      This release is ABI incompatible with prior releases of libvpx, so the
       "major" version number has been bumped to 1. You must recompile your
-      applications against the latest version of the libaom headers. The
+      applications against the latest version of the libvpx headers. The
       API remains compatible, and this should not require code changes in most
       applications.
 
@@ -271,7 +271,7 @@
           Cayuga) given a frame with corrupt partition sizes.
 
           A bounded out of bounds read was discovered affecting all
-          versions of libaom. Given an multipartition input frame that
+          versions of libvpx. Given an multipartition input frame that
           is truncated between the mode/mv partition and the first
           residiual paritition (in the block of partition offsets), up
           to 3 extra bytes could have been read from the source buffer.
@@ -299,16 +299,16 @@
     notes in this document for that release.
 
   - Enhancements:
-          Stereo 3D format support for aomenc
+          Stereo 3D format support for vpxenc
           Runtime detection of available processor cores.
           Allow specifying --end-usage by enum name
-          aomdec: test for frame corruption
-          aomenc: add quantizer histogram display
-          aomenc: add rate histogram display
-          Set AOM_FRAME_IS_DROPPABLE
+          vpxdec: test for frame corruption
+          vpxenc: add quantizer histogram display
+          vpxenc: add rate histogram display
+          Set VPX_FRAME_IS_DROPPABLE
           update configure for ios sdk 4.3
-          Avoid text relocations in ARM aom decoder
-          Generate a aom.pc file for pkg-config.
+          Avoid text relocations in ARM vp8 decoder
+          Generate a vpx.pc file for pkg-config.
           New ways of passing encoded data between encoder and decoder.
 
   - Speed:
@@ -336,7 +336,7 @@
           disable trellis optimization for first pass
           Write SSSE3 sub-pixel filter function
           Improve SSE2 half-pixel filter funtions
-          Add aom_sub_pixel_variance16x8_ssse3 function
+          Add vp8_sub_pixel_variance16x8_ssse3 function
           Reduce unnecessary distortion computation
           Use diamond search to replace full search
           Preload reference area in sub-pixel motion search (real-time mode)
@@ -369,7 +369,7 @@
           Fix semaphore emulation, spin-wait intrinsics on Windows
           Fix build with xcode4 and simplify GLOBAL.
           Mark ARM asm objects as allowing a non-executable stack.
-          Fix aomenc encoding incorrect webm file header on big endian
+          Fix vpxenc encoding incorrect webm file header on big endian
 
 
 2011-03-07 v0.9.6 "Bali"
@@ -381,7 +381,7 @@
     document for that release.
 
   - Enhancements:
-      aomenc --psnr shows a summary when encode completes
+      vpxenc --psnr shows a summary when encode completes
       --tune=ssim option to enable activity masking
       improved postproc visualizations for development
       updated support for Apple iOS to SDK 4.2
@@ -402,7 +402,7 @@
         FDCT optimizations.
         x86 sse2 temporal filter
         SSSE3 version of fast quantizer
-        aom_rd_pick_best_mbsegmentation code restructure
+        vp8_rd_pick_best_mbsegmentation code restructure
         Adjusted breakout RD for SPLITMV
         Changed segmentation check order
         Improved rd_pick_intra4x4block
@@ -411,7 +411,7 @@
         ARMv6 optimized half pixel variance calculations
         Full search SAD function optimization in SSE4.1
         Improve MV prediction accuracy to achieve performance gain
-        Improve MV prediction in aom_pick_inter_mode() for speed>3
+        Improve MV prediction in vp8_pick_inter_mode() for speed>3
 
   - Quality:
       Best quality mode improved PSNR 6.3%, and SSIM 6.1%. This release
@@ -442,7 +442,7 @@
       Fix ARM encoder crash with multiple token partitions
       Fixed bug first cluster timecode of webm file is wrong.
       Fixed various encoder bugs with odd-sized images
-      aome_get_preview fixed when spatial resampling enabled
+      vp8e_get_preview fixed when spatial resampling enabled
       quantizer: fix assertion in fast quantizer path
       Allocate source buffers to be multiples of 16
       Fix for manual Golden frame frequency
@@ -454,9 +454,9 @@
 
   - Upgrading:
     This release incorporates backwards-incompatible changes to the
-    ivfenc and ivfdec tools. These tools are now called aomenc and aomdec.
+    ivfenc and ivfdec tools. These tools are now called vpxenc and vpxdec.
 
-    aomdec
+    vpxdec
       * the -q (quiet) option has been removed, and replaced with
         -v (verbose). the output is quiet by default. Use -v to see
         the version number of the binary.
@@ -469,13 +469,13 @@
         options must be specified.
 
           $ ivfdec -o OUTPUT INPUT
-          $ aomdec --i420 -o OUTPUT INPUT
+          $ vpxdec --i420 -o OUTPUT INPUT
 
       * If an output file is not specified, the default is to write
         Y4M to stdout. This makes piping more natural.
 
           $ ivfdec -y -o - INPUT | ...
-          $ aomdec INPUT | ...
+          $ vpxdec INPUT | ...
 
       * The output file has additional flexibility for formatting the
         filename. It supports escape characters for constructing a
@@ -483,33 +483,33 @@
         replaces the -p option. To get the equivalent:
 
           $ ivfdec -p frame INPUT
-          $ aomdec --i420 -o frame-%wx%h-%4.i420 INPUT
+          $ vpxdec --i420 -o frame-%wx%h-%4.i420 INPUT
 
-    aomenc
+    vpxenc
       * The output file must be specified with -o, rather than as the
         last argument.
 
           $ ivfenc <options> INPUT OUTPUT
-          $ aomenc <options> -o OUTPUT INPUT
+          $ vpxenc <options> -o OUTPUT INPUT
 
       * The output defaults to webm. To get IVF output, use the --ivf
         option.
 
           $ ivfenc <options> INPUT OUTPUT.ivf
-          $ aomenc <options> -o OUTPUT.ivf --ivf INPUT
+          $ vpxenc <options> -o OUTPUT.ivf --ivf INPUT
 
 
   - Enhancements:
-      ivfenc and ivfdec have been renamed to aomenc, aomdec.
-      aomdec supports .webm input
-      aomdec writes .y4m by default
-      aomenc writes .webm output by default
-      aomenc --psnr now shows the average/overall PSNR at the end
+      ivfenc and ivfdec have been renamed to vpxenc, vpxdec.
+      vpxdec supports .webm input
+      vpxdec writes .y4m by default
+      vpxenc writes .webm output by default
+      vpxenc --psnr now shows the average/overall PSNR at the end
       ARM platforms now support runtime cpu detection
-      aomdec visualizations added for motion vectors, block modes, references
-      aomdec now silent by default
-      aomdec --progress shows frame-by-frame timing information
-      aomenc supports the distinction between --fps and --timebase
+      vpxdec visualizations added for motion vectors, block modes, references
+      vpxdec now silent by default
+      vpxdec --progress shows frame-by-frame timing information
+      vpxenc supports the distinction between --fps and --timebase
       NASM is now a supported assembler
       configure: enable PIC for shared libs by default
       configure: add --enable-small
@@ -520,13 +520,13 @@
       Improve handling of invalid frames
       Fix valgrind errors in the NEON loop filters.
       Fix loopfilter delta zero transitions
-      Fix valgrind errors in aom_sixtap_predict8x4_armv6().
+      Fix valgrind errors in vp8_sixtap_predict8x4_armv6().
       Build fixes for darwin-icc
 
   - Speed:
-      20-40% (average 28%) improvement in libaom decoder speed,
+      20-40% (average 28%) improvement in libvpx decoder speed,
       including:
-        Rewrite aom_short_walsh4x4_sse2()
+        Rewrite vp8_short_walsh4x4_sse2()
         Optimizations on the loopfilters.
         Miscellaneous improvements for Atom
         Add 4-tap version of 2nd-pass ARMv6 MC filter.
@@ -542,8 +542,8 @@
       Encoder speed improvements (percentage gain not measured):
         Skip unnecessary search of identical frames
         Add SSE2 subtract functions
-        Improve bounds checking in aom_diamond_search_sadx4()
-        Added aom_fast_quantize_b_sse2
+        Improve bounds checking in vp8_diamond_search_sadx4()
+        Added vp8_fast_quantize_b_sse2
 
   - Quality:
       Over 7% overall PSNR improvement (6.3% SSIM) in "best" quality
@@ -623,5 +623,5 @@
 
 
 2010-05-18 v0.9.0
-  - Initial open source release. Welcome to WebM and AOM!
+  - Initial open source release. Welcome to WebM and VP8!
 
