--- a/NEWS
+++ b/NEWS
@@ -1,9 +1,36 @@
 liblouis NEWS -- history of user-visible changes.  	-*- org -*-
 
 * Noteworthy changes in release 3.1.0 (2016-10-??)
-
 ** New features
 - Meta data
+
+*** noUndefinedDots mode
+Add a noUndefinedDots mode to disable the output of dot numbers when
+back-translating undefined patterns. Thanks to James Teh.
+
+When backtranslating input from a braille keyboard cell by cell, it is
+desirable to output characters as soon as they are produced.
+Similarly, when backtranslating contracted braille, it is desirable to
+provide a "guess" to the user of the characters they typed. To achieve
+this, liblouis needs to have the ability to produce no text when
+indicators (which don't produce a character by themselves) are not
+followed by another cell. This works already for indicators liblouis
+knows about such as capital sign, number sign, etc., but it does not
+work for indicators which are not (and cannot be) specifically defined
+as indicators. For example, in UEB, dots 4 5 6 alone produces the text
+"\456/". Setting the noUndefinedDots mode suppresses this dot number
+output.
+
+*** partialTrans mode
+Add a partialTrans mode to specify that back-translation input should
+be treated as an incomplete word. Thanks to James Teh.
+  
+If this mode is set, rules that apply only for complete words or at
+the end of a word will not take effect. This is intended to be used
+when translating input typed on a braille keyboard to provide a rough
+idea to the user of the characters they are typing before the word is
+complete.
+
 ** Bug fixes
 - Fixes implicit declaration of 'pattern_check' thanks to  Reiner Dolp
 ** Other changes
@@ -20,6 +47,7 @@ liblouis NEWS -- history of user-visible changes.  	-*- org -*-
   - Added rules for unicode apostrophe handling
 - Complete overhaul of Lithuanian 8-dots table, thanks to Rimas
   Kudelis
+
 ** Backwards incompatible changes
 None
 
