Return to previous mips minimum ISA logic in configure
Optimistic removal of related downstream configure patch in this roll's
merge from upstream was too optimistic and broke at least build_ffmpeg
android mipsel attempts. This change returns that portion of configure
to previous logic.

--- a/chromium/patches/README
+++ b/chromium/patches/README
@@ -15,6 +15,11 @@ Current patches:
     Commented out some pkg-config checks for libopus since we use Chromium's
     copy.
 
+    Pinned older mipsel minimum ISA detection logic, including removal of
+    add_cflags "-mips64", which conflicts with --extra-cflags=-mips64r6 for
+    mips64el. In M56 roll, returned to previous logic here to prevent population
+    of CFLAGS etc with various -mips32r* which broke builds.
+
   Changes/additions to compat/msvcrt/{snprintf.c,snprintf.h}
   Changes/additions to compat/{strtod.c,strtod.h}
     Commit b5269bfb48c71fe17c02eee00c71b1e9762497db changes these files and
