Enable mac build_ffmpeg of lavf/wavdec.c
Mac searches more extensively for symbols when building dynamic
libaries.  Since last ffmpeg roll, wavdec.c now conditionally calls a
method ff_spdif_probe, which is not included in build
(CONFIG_SPDIF_DEMUXER is disabled), and build_ffmpeg on mac thus fails.

This change uses a downstream #if to completely remove the call to
ff_spdif_probe in wavdec.c

--- a/chromium/patches/README
+++ b/chromium/patches/README
@@ -62,6 +62,9 @@ Current patches:
     TODO(chcunningham/dalecurtis): https://crbug.com/504623 - Determine whether
     these changes are still necessary and either remove or document them.
 
+  In libavformat/wavdec.c, exclude code block completely to remove reference to
+    symbol not in our builds, conditioned by CONFIG_SPDIF_DEMUXER.
+
   Changes to libavutil/arm/intmath.h
     Remove static av_always_inline av_const unsigned av_clip_uintp2_arm() and
     av_clip_intp2_arm() due to compilation failure.
