--- a/chromium/patches/README
+++ b/chromium/patches/README
@@ -57,18 +57,19 @@ Current patches:
     Change to 'return' in read_chapter to 'goto end' to fix a minor memory leak.
     crbug.com/689339
 
-  libavformat/isom.h, libavformat/mov.c
-    Revert 'sidx' processing for .mov containers.
-    8b946dec reverts commit 4ab56667594842283dc5ae07f0daba2a2cb4d3af.
-    'sidx' box processing is broken for MOV containers. http://crbug.com/568336.
+  libavformat/mov.c
+    Incorrect frames after seeking. http://crbug.com/568336.
     Reported: http://ffmpeg.org/pipermail/ffmpeg-devel/2015-December/185040.html
-
-    Upstream ffplay as of 134233972e7961d9a41c67d27da505e459d5edfa still
-    reproduces this problem.
-
-    That revert removed a local |ret| needed by later dd34e89f, so M56 merge
-    commit e4decbe7 includes a downstream declaration of |ret| in
-    mov_seek_stream in mov.c.
+    Additional FFmpeg bug: https://trac.ffmpeg.org/ticket/6402
+    In Chromium this shows up as frames out of order, so the video jumps
+    around after seek (example in crbug). Using upstream ffplay the out of
+    order frames do not occur, but the first few frames after seek are not
+    correct. Partial revert of commit 4ab56667594842283dc5ae07f0daba2a2cb4d3af
+    to only remove mov_seek_fragment() but leave rest of that commit to make
+    future merges easier. (After debugging, either removing mov_seek_fragment()
+    or mov_read_sidx() avoids the problem, so it is an interaction between
+    the 2 of them. As it shows up in Chromium after a seek, removing
+    mov_seek_fragment() seems like a better choice.)
 
   libavformat/matroskadec.c
     Add CONFIG_LZO and CONFIG_SIPR_DECODER (and other CONFIG_*) checks to remove
