avformat/mov: Check STSC and remove invalid entries
Fixes assertion failure.

Applied from upstream patch currently in review at
https://patchwork.ffmpeg.org/patch/8051/, authored by
michael@niedermayer.cc.

BUG=822547,822666,823009

Change-Id: Id9ab21dfe96c916d53b3c596d5cbaa3da27202fa
Reviewed-on: https://chromium-review.googlesource.com/971356
Reviewed-by: Xiaohan Wang <xhwang@chromium.org>

--- a/chromium/patches/README
+++ b/chromium/patches/README
@@ -95,3 +95,8 @@ Current patches:
 
   libavformat/oggparseflac.c
     flac_header(): Free extradata before reallocating. https://crbug.com/789835
+
+  libavformat/mov.c
+    Check STSC and remove invalid entries. Applied from a patch currently in
+    upstream review at https://patchwork.ffmpeg.org/patch/8051/
+    See https://crbug.com/822547, https://crbug.com/822666, https://crbug.com/823009.
