--- a/ChangeLog
+++ b/ChangeLog
@@ -1,10 +1,22 @@
 2018-10-02  Werner Lemberg  <wl@gnu.org>
 
-	[psaux] Fix numeric overflow.
+	[psaux] Fix segfault.
 
 	Reported as
 
 	  https://bugs.chromium.org/p/oss-fuzz/issues/detail?id=10768
+
+	* src/psaux/cffdecode.c (cff_decoder_parse_charstrings)
+	<cff_op_callothersubr> [CFF_CONFIG_OPTION_OLD_ENGINE]: Check
+	argument.
+
+2018-10-02  Werner Lemberg  <wl@gnu.org>
+
+	[psaux] Fix numeric overflow.
+
+	Reported as
+
+	  https://bugs.chromium.org/p/oss-fuzz/issues/detail?id=10740
 
 	* src/psaux/cffdecode.c (cff_decoder_parse_charstrings) <cff_op_roll>
 	[CFF_CONFIG_OPTION_OLD_ENGINE]: Use NEG_INT.
